# cpp-compression

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  benchmark.bash  build.bash  compressionBenchmark.bash  decompressionBenchmark.bash  downloadTestData.bash  tasklist.txt
common/: Makefile.common  aligned_allocator.h  call_mpi.h  dummy.cpp  dummy.h  omp_helper.h
compression/: .gitignore  CMakeLists.txt  Makefile  bzip2.cpp  serial_compression.cpp
decompression/: serial_decompression.cpp
src/: CMakeLists.txt  build.bash
src/common/: partitioner.hpp  timer.cpp  timer.h
src/compression/: CMakeLists.txt  openmp_compression.cpp  serial_compression.cpp  serial_compression.cpp.orig  sycl_compress.cpp
src/decompression/: CMakeLists.txt  openmp_decompression.cpp  serial_decompression.cpp
